[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Art/Interface/CHAT.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/Interface/fonte/classic_memesbruh03.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Art/Interface/Laura.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Interface/Atendente.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Interface/robo.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Interface/Player_COZINHEIRO.png" type="Texture" id=7]
[ext_resource path="res://Assets/Scripts/Caixa de texto.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Caixa de Texto" type="Control"]
margin_left = 1.0
margin_top = -1.0
margin_right = 38.0
margin_bottom = 22.0
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.447059 )
margin_left = -1.0
margin_top = 2.0
margin_right = 347.0
margin_bottom = 255.0

[node name="Chat" type="TextureRect" parent="."]
margin_left = 128.0
margin_top = 19.0
margin_right = 228.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.3 )
texture = ExtResource( 1 )

[node name="Chat2" type="TextureRect" parent="Chat"]
visible = false
margin_left = -72.0
margin_top = 23.0769
margin_right = 28.0
margin_bottom = 123.077
rect_scale = Vector2( 1.02, 1 )
texture = ExtResource( 1 )

[node name="Context" type="Label" parent="Chat"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 2.0
margin_top = 36.9231
margin_right = 482.0
margin_bottom = 103.923
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "  Olá  (nome do player)! Eu sou o (nome do robô), o robô do
 multiverso. Quando você pesquisou sobre colaboraçáo em seu 
 computador, nós, seres dos mundos paralelos, decidimos
 atender ao seu chamado e te ensinar a colaborar na prática
  Pressione Enter"

[node name="Context2" type="Label" parent="Chat"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 1.84615
margin_top = 37.7778
margin_right = 481.846
margin_bottom = 102.778
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "  Nada como o bom cotidiano para aprender. Para isso, você
 irá viver em vários mundos diferentes, e temos a confiança 
 de que ao final você terá aprendido tudo que precisa.
  Pressione Enter"

[node name="Mecanica" type="Label" parent="Chat"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 1.53846
margin_top = 38.2222
margin_right = 481.538
margin_bottom = 105.222
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "  Para se mover, você tem duas opçóes: 
 as setas de direita, esquerda, cima e baixo do teclado, ou
 as letras W, A, S e D. Para pegar e soltar objetos ou 
 interagir com outros personagens, você deve usar a letra E. 
  Pressione Enter"

[node name="Fim_context" type="Label" parent="Chat"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 2.15385
margin_top = 38.6667
margin_right = 475.154
margin_bottom = 103.667
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "
 Aproveite sua jornada e boa sorte, (nome do player)!

  Pressione Enter"

[node name="Pedido" type="Label" parent="Chat"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 2.0
margin_top = 43.8462
margin_right = 475.0
margin_bottom = 110.846
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "  Olá, boa tarde! Eu sou Laura e gostaria de encomendar um
 bolo com vocês, essa confeitaria foi muito recomendada. 
 Hoje é aniversário da minha filha, entáo capriche
 aí por favor.
  Pressione Enter"

[node name="Pedido2" type="Label" parent="Chat"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 3.33334
margin_top = 42.3077
margin_right = 476.333
margin_bottom = 109.308
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "  
  Ah, e o sabor é de chocolate , com cobertura de chantilly
 e brigadeiro.

  Pressione Enter"

[node name="Resposta_Atendente" type="Label" parent="Chat"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -70.0
margin_top = 65.3846
margin_right = 403.0
margin_bottom = 130.385
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "
  Pode deixar, ficará incrível!

  Pressione Enter"

[node name="Fala_player" type="Label" parent="Chat"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 2.0
margin_top = 43.0769
margin_right = 475.0
margin_bottom = 110.077
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "
  Coloquei a massa na bancada, pode colocar o recheio e 
 a cobertura

  Pressione Enter"

[node name="otto" type="Label" parent="Chat"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -68.6667
margin_top = 65.3846
margin_right = 404.333
margin_bottom = 132.385
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "
  Ok!
  Vou finalizar nosso trabalho

  Pressione Enter"

[node name="Finalização" type="Label" parent="Chat"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 2.0
margin_top = 36.9231
margin_right = 482.0
margin_bottom = 103.923
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "  Parabéns, você finalizou a Fase 1. Como você
  percebeu, três pessoas precisaram trabalhar para entregar
  o resultado, Kaled anotando o pedido e Otto fazendo o
  bolo com você.
  Pressione Enter"

[node name="Finalização2" type="Label" parent="Chat"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 2.0
margin_top = 36.9231
margin_right = 482.0
margin_bottom = 103.923
rect_scale = Vector2( 0.2, 0.27 )
theme = SubResource( 2 )
text = "  Parabéns, você aprendeu o que é colaboraçáo. Guarde esse 
  conceito, será importante para as próximas fases.
  Boa sorte!
"

[node name="Laura_Cliente" type="TextureRect" parent="Chat"]
visible = false
margin_left = 94.6667
margin_top = 69.2308
margin_right = 114.667
margin_bottom = 106.231
rect_scale = Vector2( 0.5, 0.65 )
texture = ExtResource( 4 )

[node name="Kaled_Atendente" type="TextureRect" parent="Chat"]
visible = false
margin_left = -76.0
margin_top = 86.1539
margin_right = -56.0
margin_bottom = 123.154
rect_scale = Vector2( 0.5, 0.65 )
texture = ExtResource( 5 )

[node name="Player_cozinheiro" type="TextureRect" parent="Chat"]
visible = false
margin_left = 96.0
margin_top = 66.1538
margin_right = 116.0
margin_bottom = 103.154
rect_scale = Vector2( 0.5, 0.65 )
texture = ExtResource( 7 )

[node name="otto_cozinheiro" type="TextureRect" parent="Chat"]
visible = false
margin_left = -76.0
margin_top = 84.6154
margin_right = -56.0
margin_bottom = 121.616
rect_scale = Vector2( 0.5, 0.65 )
texture = ExtResource( 7 )

[node name="Robo" type="TextureRect" parent="Chat"]
visible = false
margin_left = 84.0
margin_top = 7.6923
margin_right = 162.0
margin_bottom = 85.6923
rect_scale = Vector2( 0.32, 0.41 )
texture = ExtResource( 6 )
